--- a/css/styles.css
+++ b/css/styles.css
@@ -178,8 +178,7 @@ body {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.current:hover::after,
-.current:focus::after {
+.current::after {
   opacity: 1;
 }
 .icon-item {
@@ -720,7 +719,7 @@ body {
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  padding: 10px auto;
+  padding: 10px 0;
   justify-content: center;
 }
 
@@ -818,6 +817,11 @@ body {
   margin-bottom: 12px;
 }
 .form-field-label {
+  display: inline-block;
+  font-size: 12px;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
   color: var(--secondary-text-color);
   margin-bottom: 4px;
 }
@@ -832,6 +836,7 @@ body {
 }
 
 .form-field-textarea {
+  display: block;
   height: 120px;
   width: 100%;
   padding: 16px 12px;
@@ -840,6 +845,9 @@ body {
   outline: none;
   resize: none;
   margin-bottom: 20px;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
 }
 
 .form-field-textarea:focus {
@@ -867,7 +875,39 @@ body {
   text-align: center;
   margin-bottom: 30px;
 }
+
+.checkbox-input {
+  appearance: none;
+}
+
+.checkbox-icon {
+  border: 2px solid var(--primery-text-color);
+  border-radius: 2px;
+  fill: transparent;
+  margin-right: 7px;
+}
+
+.checkbox-input:checked:focus + .checkbox-icon {
+  fill: var(--white-color);
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+}
+
 .form-submit {
   display: block;
   margin: 0 auto;
+}
+
+/* .checkbox-input:checked + .checkbox-icon {
+  fill: var(--white-color);
+  background-color: var(--accent-color);
+} */
+/* .form-field-checkbox:checked + checkbox-label {
+}
+.checkbox-input:checked + .checkbox-label {
+  fill: var(--white-color);
+  background-color: var(--accent-color); 
+} */
+.modal-link {
+  color: var(--accent-color);
 }
